<resources>
    <string name="app_name">African Owned</string>
    <string name="africanowned">African Owned</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="listingtype">listingtype</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="submitUrListing">submitUrListing</string>
    <string name="Countery">Countery</string>
    <string name="facebook_app_id">4572330199520192</string>
    <string name="fb_login_protocol_scheme">fb4572330199520192</string>
    <string-array name="spinner_country_choices">
        <item>Agriculture</item>
        <item>USA</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
    </string-array>
    //For Hours and Dates
    <string-array name="spin_weekDays">

        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="spin_socailMedia">

        <item>Facebook</item>
        <item>Twitter</item>
        <item>Linkdin</item>
        <item>Youtube</item>
        <item>Instagram</item>

    </string-array>

    <string-array name="spin_countery">

        <item>African American owned</item>
        <item>African European owned</item>
        <item>Algerian owned</item>
        <item>Angola owned</item>
        <item>Basothon owned</item>
        <item>Batswana owned</item>
        <item>Beninese owned</item>
        <item>Black British owned</item>
        <item>Black European owned</item>
        <item>Black owned</item>
        <item>Burkinabe owned</item>
        <item>Cameroonian owned</item>
        <item>Caribbean owned </item> <item>Central African owned</item>
        <item>Chadian owned</item> <item>Congolese owned</item>
        <item>Djibouti owned</item>v <item>East African owned</item>
        <item>Egypt owned</item>
        <item>Equatorial Guinean owned</item>
        <item>Ethipian owned</item> <item> Gabonese owned </item>
        <item>Gambian owned</item> <item>Guinea-Bissauan owned</item>
        <item>Kenyan owned</item> <item>Libyan owned</item>
        <item>Malian owned</item>
        <item>Mauritanian owned</item>
        <item>Mozambican owned </item> <item>Moroccan owned</item>
        <item>Namibian owned</item>
        <item>Nigerian owned</item>

        <item>North African  owned</item>
        <item>Rwandan owned</item>
        <item>Senegales owned</item>
        <item>Seychellois owned</item>
        <item>Sierra Leonean  owned</item>
        <item>South Afssrican owned</item>
        <item>Somalian  owned</item>
        <item>South Sudanese  owned</item>
        <item>Tanzanian owned</item>
        <item>Togoese owned</item>
        <item>Tunisian owned</item>
        <item>Ugandan owned</item>

        <item>West African owned</item>
        <item>Zimbabwean owned</item>
          </string-array>
    <string-array name="begningHours">
        <item>Select Start Hr</item>
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>01:00 AM</item>
        <item>01:30 AM</item>
        <item>02:30 AM</item>
        <item>03:00 AM</item>
        <item>03:30 AM</item>
        <item>04:00 AM</item>
        <item>04:30 AM</item>
        <item>05:00 AM</item>
        <item>05:30 AM</item>
        <item>06:00 AM</item>
        <item>06:30 AM</item>
        <item>07:00 AM</item>
        <item>07:30 AM</item>
        <item>08:00 AM</item>
        <item>08:30 AM</item>
        <item>09:00 AM</item>
        <item>09:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 AM</item>
    </string-array>

    <string-array name="endHours">
        <item>Select End Hr</item>
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>01:00 AM</item>
        <item>01:30 AM</item>
        <item>02:30 AM</item>
        <item>03:00 AM</item>
        <item>03:30 AM</item>
        <item>04:00 AM</item>
        <item>04:30 AM</item>
        <item>05:00 AM</item>
        <item>05:30 AM</item>
        <item>06:00 AM</item>
        <item>06:30 AM</item>
        <item>07:00 AM</item>
        <item>07:30 AM</item>
        <item>08:00 AM</item>
        <item>08:30 AM</item>
        <item>09:00 AM</item>
        <item>09:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>09:00 AM</item>
    </string-array>

    <string-array name="spin_catagory">
        <item>Agriculture</item>
        <item>Barbers</item>
        <item>Beauty</item>
        <item>Car Rental</item>
        <item>Childcare</item>
        <item>Classes</item>
        <item>Clubs</item>
        <item>Construction</item>
        <item>Consulting </item>
        <item>Creative</item>
        <item>-Art</item>
        <item>-Fabrics</item>
        <item>Crowdfunding</item>
        <item>DJ</item>
        <item>Ecommerce</item>
        <item>Education</item>
        <item>Electroncis</item>
        <item>Entertainment</item>
        <item>Export</item>
        <item>Fabrics</item>
        <item>Farming</item>
        <item>Food Delivery</item>
        <item>Gaming</item>
        <item>Hairstylist</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="country">Country</string>
    <string name="Tagline">Tagline</string>
    <string name="submit_your_listing_here">Submit Your Listing Here</string>
    <string name="tell_us_about_your_business_or_service">Tell us about your business or service</string>

    <string name="what_type_of_listing_do_you_have">WHAT TYPE OF LISTING DO YOU HAVE?</string>
    <string name="listing_title">Listing Title</string>
    <string name="does_your_business_have_a_tagline">Does your Business Have A Tagline?</string>
    <string name="primary_listing_details">PRIMARY LISTING DETAILS?</string>

    <string name="todo">TODO</string>

    <string name="latitude">Latitude</string>

    <string name="manual_coordinates">Manual Coordinates</string>
    <string name="search_by_google">Search By Google</string>
    <string name="drop_pin">Drop Pin</string>
    <string name="add">Add</string>
    <string name="cricketer_list">Cricketer List</string>
    <string name="submit_list">Submit List</string>
    <string name="select_category">Select category</string>
    <string name="add_custome_address">Add Custome Address</string>
    <string name="full_address">Full Address</string>
    <string name="longitude">Longitude</string>
    <string name="select_city">Select City</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="website">Website</string>
    <string name="allow_data_analytics">Allow Data Analytics</string>
    <string name="notifications">On</string>
    <string name="do_you_allow_sharing_of_data_analytics">Data will be used for marketing purposes</string>
    <string name="notification_option">Notifications</string>
    <string name="notification_off">Off</string>
    <string name="app_description">African Owned</string>
    <string name="contact_group">Contact Group</string>
    <string name="application_information_group">Find your Best find your interests any where any time with Listingpro Ap Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusa ntium dolore mque laud antium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi natus error sit olore mque laud anti arc hitecto beatae vitae dicta sunt explicabo mque laud anti arc hitecto beatae vitae dicta sunt explicabo mque laud anti arc hitecto beatae vitae dicta sunt explicabo.</string>
    <string name="page_id">id</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="or">or</string>
    <string name="phone">Phone</string>
    <string name="select_weekddays">weekdays</string>
    <string name="social_media">socialmedia</string>
    <string name="answer">answer</string>
    <string name="faq">faq</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_days">days</string>
    <string name="business_hour">bh</string>
    <string name="media_name">medianame</string>
    <string name="media_address">mediaadd</string>
    <string name="add_new">addnew</string>
    <string name="select_social_media">Select Social Media</string>
    <string name="detail_describtion_abut_your_listing">Detail Describtion abut your listing</string>
    <string name="more_info">MORE INFO.</string>
    <string name="tages_or_keywords_comma_separated">Tages or Keywords (comma separated).</string>
    <string name="tages_or_keywords">Tages or keywords</string>
    <string name="select_end_hours">selectstring</string>
    <string name="_24_hours">24hr</string>
    <string name="next">Next</string>
    <string name="select_buiness_hours">Select Buiness Hours</string>
    <string name="userName_required">Listing Title is  required</string>
    <string name="add_city">Add City</string>

    <string name="submit_your_listing_here2">Submit your listing here</string>
    <string name="city">city</string>

    <string name="city2">City</string>
    <string name="adress">Address</string>
    <string name="address3">Address</string>
    <string name="detail_description_about_your_listing2">Detail description about your listing</string>
    <string name="more_information_text">More Information</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>