<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genderGroup"
                android:padding="@dimen/tenDp"
                android:layout_marginTop="50dp"
                android:text="@string/notification_option"
                android:textStyle="italic" />


            <RadioGroup
                android:id="@+id/radioPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/notifications" />

                <RadioButton
                    android:id="@+id/radioPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_off" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/dataPermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderGroup"
            android:padding="@dimen/tenDp"
            android:text="@string/do_you_allow_sharing_of_data_analytics"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/privacyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dataPermissionTextView"
            android:text="@string/allow_data_analytics" />


    </RelativeLayout>
</ScrollView>