<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/media"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/media_name"
        android:layout_weight="1"
        android:textSize="14sp"

        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <TextView
        android:id="@+id/mediaWeb"
        android:layout_width="match_parent"
        android:layout_height="20dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"

        android:layout_weight="1"
        android:paddingStart="10dp"
        android:text="@string/media_address"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription,RtlHardcoded" />

</LinearLayout>
