<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".businessHouresFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="174dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextBUtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentViwLayout" />


    <LinearLayout
        android:id="@+id/parentViwLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/socialMedia"
                    android:layout_width="match_parent"

                    android:layout_height="40dp"
                    android:contentDescription="@string/select_weekddays" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/socialMediaAdress"
                android:layout_height="match_parent"
                android:hint="Social Media"

                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentViwLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:text="Select Social Media"

        android:textSize="15sp"
        app:flow_horizontalAlign="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="187dp"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>